--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,7 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% if enhanced_cart.any? %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +48,9 @@
       <% end %>
     </div>
   </div>
-
+  <% else %>
+  <div class="panel panel-default">
+    Nothing in your cart
+  </div>
+<% end %>
 </section>
