--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -40,6 +40,16 @@ main section.categories-show {
         transition: all 0.3s;
       }
 
+      aside.sold-out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: peachpuff;
+        font-size: 0.8em;
+        border-bottom-right-radius: 20px;
+      }
+
       aside.price {
         position: absolute;
         top: 0;
