--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -20,8 +20,8 @@
        </tr>
        </thread>
        <tbody>
-        <% @line_items.each do |item| %>
-          <%# <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %> %>
+        <% enhanced_order.each do |item| %>
+          <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
           <% end %>
         </tbody>
         <tfoot>
