--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -11,6 +11,8 @@
   <div class="row">
     <div class="col-sm-6 col-sm-offset-1">
       <%= form_for [:admin, @category] do |form| %>
+      <%puts "---"%>
+      <% puts form.object.inspect %>
 
         <% if form.object.errors.any? %>
           <div class="alert alert-danger">
