--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -14,9 +15,6 @@
         <li>
           <%= link_to 'Home', :root %>
         </li>
-        <li>
-        <%= link_to 'About', :about %>
-        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
@@ -28,25 +26,42 @@
             <% end %>
           </ul>
         </li>
+        <li>
+        <%= link_to 'About', :about %>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-       <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
-            <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Dashboard', [:admin, :root] %></li>
-            <li><%= link_to 'Products',  [:admin, :products] %></li>
-            <li><%= link_to 'Categories',  [:admin, :categories] %></li>
-          </ul>
+      <% if !current_user %>
+      <li>
+        <div class="navbar-text">
+          <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+        </div>
+      </li>
+      <% else %>
+      <li>
+          <div class="navbar-text">
+              Signed in as <%= current_user.first_name %> | <%= link_to "Logout", '/logout' %>
+          </div>
         </li>
-        <li>
-          <%= link_to cart_path do %>
-            <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
-          <% end %>
-        </li>
+      <% if current_user.id == 1 %>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><%= link_to 'Dashboard',  [:admin, :root]       %></li>
+          <li><%= link_to 'Products',   [:admin, :products]   %></li>
+          <li><%= link_to 'Categories', [:admin, :categories] %></li>
+        </ul>
+      </li>
+    <% end %>
+    <% end %>
+      <li>
+        <%= link_to cart_path do %>
+          <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
+        <% end %>
+      </li>
       </ul>
     </div>
   </div>
