changed name on about route

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,7 +27,7 @@
           </ul>
         </li>
         <li>
-        <%= link_to 'About', :about %>
+        <%= link_to 'About', :abouts %>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
